--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@dsplay/template-utils",
-  "version": "0.1.1",
-  "main": "index.js",
-  "module": "index.js",
+  "version": "0.1.0",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "files": [
-    "dist/**"
+    "dist"
   ],
   "scripts": {
     "start": "react-scripts start",
