--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@dsplay/template-utils",
   "version": "1.1.2",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
+  "main": "dist/dsplay-template-utils.js",
+  "module": "src/index.js",
   "files": [
     "dist"
   ],
@@ -11,7 +11,8 @@
     "build-examples": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "build": "rimraf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
+    "build2": "rimraf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
+    "build": "rimraf dist && NODE_ENV=production webpack",
     "prepublish": "npm run build",
     "prepare": "npm run build"
   },
@@ -24,7 +25,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "^3.4.0",
-    "rimraf": "^2.7.1"
+    "rimraf": "^2.7.1",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11"
   },
   "browserslist": [
     ">0.2%",
