--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@dsplay/template-utils",
   "version": "1.1.5",
   "main": "dist/dsplay-template-utils.js",
+  "module": "dist/dsplay-template-utils.js",
   "files": [
     "dist"
   ],
